Texture extension mode 'clip' defaults to 'extend' #64455

Closed
opened 2019-05-10 21:41:45 +02:00 by Nick Masterton · 6 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.91

Blender Version
Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-05-06 16:39, hash: c0432c2385
Worked: (optional)

Short description of error
When using a material with an image texture and setting the extension mode to 'clip' the shader appears to assume the extension mode 'extend' instead.

Exact steps for others to reproduce the error
Create plane
Add uv map
Create material with image texture using the UV map node as the image texture vector input
Scale the uv map down so that the image texture repeats
Change the image texture extension mode to 'clip'

clip_bug.blend

material clip bug.png

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.91 **Blender Version** Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-05-06 16:39, hash: `c0432c2385` Worked: (optional) **Short description of error** When using a material with an image texture and setting the extension mode to 'clip' the shader appears to assume the extension mode 'extend' instead. **Exact steps for others to reproduce the error** Create plane Add uv map Create material with image texture using the UV map node as the image texture vector input Scale the uv map down so that the image texture repeats Change the image texture extension mode to 'clip' [clip_bug.blend](https://archive.blender.org/developer/F7025961/clip_bug.blend) ![material clip bug.png](https://archive.blender.org/developer/F7025965/material_clip_bug.png)
Author

Added subscriber: @VupliDerts-2

Added subscriber: @VupliDerts-2
Author

Apologies, this was not originally tested on the latest version of Blender. However, I just tried it on a fresh version of Blender 2.8 and the bug persists.

Apologies, this was not originally tested on the latest version of Blender. However, I just tried it on a fresh version of Blender 2.8 and the bug persists.

Added subscriber: @brecht

Added subscriber: @brecht
Clément Foucault was assigned by Brecht Van Lommel 2019-05-14 01:54:05 +02:00

I guess something broken in ce148c1.

input_coords is not used at all, which seems wrong at least.

I guess something broken in ce148c1. `input_coords` is not used at all, which seems wrong at least.

This issue was referenced by 2f6c4e5bb4

This issue was referenced by 2f6c4e5bb48f974c3534fcda661366edf478f569

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64455
No description provided.