Fix T64455 Texture extension mode 'clip' defaults to 'extend'